2006-11-23  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-folder.c: added support to rename
	folders
	* libtinymail-camel/tny-camel-store-account.c: refactored the
	subscriptions code
	* libtinymail-gnome-desktop/tny-gnome-account-store.c: removed a small
	leak

2006-11-21  Sergio Villar Senin <svillar@igalia.com>
	* Fixed a bug when subscribing new folders
	* Added the signal "subscription_changed" to TnyStoreAccount
	* Added a query to TnyGtkAccountTreeModel
	* tinymail/tny-demoui-summary-view.c: now asks only for the
	subscribed folders

	* This was a major API change in libtinymailui-gtk

2006-11-21  Philip van Hoof <pvanhoof@gnome.org>

	* Major changes in TnyMsg and TnyMimePart
	* First support for message/rfc822 messages
	* API documentation enhancements
	* Date fixes in TnyCamelHeader
	
	* This was a major API change in all libraries

2006-11-20  Philip van Hoof <pvanhoof@gnome.org>

	* A new style of handling mime parts
	* First building blocks for supporting message/rfc822
	* Should-be bugfix for an issue in camel-lite's mime-parser on ARM

2006-11-20  Sergio Villar Senin <svillar@igalia.com>

	* Improved the support for subscribing and ubsubscribing folders
	* Improved creating new folders

2006-11-17  Philip van Hoof <pvanhoof@gnome.org>

	* A few s/g_new/g_slice replacements

2006-11-17  Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* Fix for Mozilla bug: http://bugzilla.gnome.org/show_bug.cgi?id=157941
	(comments #46-#51 discuss the problem)
	* Copied the fix from Yelp to libtinymail-mozembed by Philip

2006-11-17  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder.h
	* libtinymail/tny-folder.c: added tny_folder_transfer_msgs for
	copying/moving messages between folders

	* libtinymail-camel/tny-camel-folder.h
	* libtinymail-camel/tny-camel-folder.c: added a default Camel
	implementation for tny_folder_transfer_msgs method

	* test/functional/Makefile.am