@@ -106,6 +106,20 @@ tny_moz_embed_msg_view_create_mime_part_view_for (TnyMsgView *self, TnyMimePart 
 }
 
 
+
+static TnyMsgView*
+tny_moz_embed_msg_view_create_new_mytype (TnyMsgView *self)
+{
+	return TNY_MOZ_EMBED_MSG_VIEW_GET_CLASS (self)->create_new_mytype_func (self);
+}
+
+static TnyMsgView*
+tny_moz_embed_msg_view_create_new_mytype_default (TnyMsgView *self)
+{
+	return tny_moz_embed_msg_view_new ();
+}
+
+
 static void 
 tny_moz_embed_msg_view_class_init (TnyMozEmbedMsgViewClass *class)
 {
@@ -115,10 +129,12 @@ tny_moz_embed_msg_view_class_init (TnyMozEmbedMsgViewClass *class)
 	object_class = (GObjectClass*) class;
 
 	class->create_mime_part_view_for_func = tny_moz_embed_msg_view_create_mime_part_view_for_default;
+	class->create_new_mytype_func = tny_moz_embed_msg_view_create_new_mytype_default;
 
 	object_class->finalize = tny_moz_embed_msg_view_finalize;
 
 	TNY_GTK_MSG_VIEW_CLASS (class)->create_mime_part_view_for_func = tny_moz_embed_msg_view_create_mime_part_view_for;
+	TNY_GTK_MSG_VIEW_CLASS (class)->create_new_mytype_func = tny_moz_embed_msg_view_create_new_mytype;
 
 	return;
 }
