@@ -52,10 +52,11 @@ tny_msg_window_get_type (void)
 		  0,      /* n_preallocs */
 		  NULL    /* instance_init */
 		};
+
 		type = g_type_register_static (G_TYPE_INTERFACE, 
 			"TnyMsgWindow", &info, 0);
 
-		g_type_interface_add_prerequisite (type, G_TYPE_OBJECT);
+		g_type_interface_add_prerequisite (type, TNY_TYPE_MSG_VIEW);
 	}
 
 	return type;
